clusters/k8s-01/apps/monitoring/grafana-mcp/configs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-mcp
spec:
  hostnames:
    - mcp-grafana.k8s-01.suslian.engineer
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https-k8s-01
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: grafana-mcp
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
